--- a/sketches/css/style.css
+++ b/sketches/css/style.css
@@ -16,7 +16,7 @@ body {
 h1 {
   font-size: 64px;
   font-weight: 300;
-  letter-spacing: -2px;
+  /* letter-spacing: -2px; */
   margin: .3em 0 .1em 0;
 }
 
@@ -164,4 +164,3 @@ blockquote:before {
 blockquote:after {
   position: absolute;
 }
-
