--- a/sketches/css/style.css
+++ b/sketches/css/style.css
@@ -6,7 +6,7 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   margin: 1em auto 4em auto;
-  width: 960px;
+  /* width: 960px; */
 }
 
 #body {
