--- a/sketches/css/style.css
+++ b/sketches/css/style.css
@@ -5,7 +5,7 @@ html {
 
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
-  margin: 1em auto 4em auto;
+  margin: 3em 3em 3em auto;
   /* width: 960px; */
 }
 
