--- a/sketches/css/style.css
+++ b/sketches/css/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  font-family: "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Raleway", "Helvetica Neue", Helvetica, sans-serif;
   margin: 3em auto auto 3em;
   /* width: 960px; */
 }
